# PGC-scholar-ms

./: .gitattributes  .gitignore  .graphify_python  .graphifyignore  AGENTS.md  DESIGN.md  GEMINI.md  PGC_SPEC.md  README.md  ROADMAP.md  dashboard.html  inbox.html  main.py  profile.html  pyproject.toml
backend/: .env.example  pyproject.toml  seed.py  test_documents.py  test_scholars.py  test_supabase_direct.py
backend/app/: main.py
backend/app/core/: database.py  dependencies.py  events.py  security.py  storage.py
backend/app/models/: __init__.py  academic_record.py  announcement.py  announcement_receipt.py  document.py  evaluation_remark.py  pending_change.py  program_history.py  prospectus_grade.py  scholar.py  submission_bin.py  system_sync.py  user.py
backend/app/routers/: academic_records.py  announcements.py  auth.py  documents.py  pending_changes.py  remarks.py  scholars.py  submission_bins.py  sync.py
backend/migrations/: env.py
backend/migrations/versions/: 0061b74b1509_verify_schema.py  1516d15a1bef_drop_remark_type.py  3b9970469f0e_initial_schema.py  5ee10ec12f32_add_submission_bins.py  64d9f2b1a0c7_add_performance_indexes.py  ab66dfea0e7a_add_avatar_url_to_scholars.py  cd81366cd8dd_add_is_approved_to_submission_bins.py  eeb1e72caa3a_add_updated_at_and_system_sync.py  fc4b66102c67_add_evaluation_remarks.py
evaluator-app/: ScholarDirectoryUpdate.md  evaluator_theme.qss  main.py  preview.html  requirements.txt  ui_prototype.py
evaluator-tauri/: .env.example  package-lock.json  package.json  plan.md
frontend_templates/: design_spec.html  (+1 more)
(+71 files in other folders)
