[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt==3.2.2",
    "fastapi>=0.135.3",
    "google-auth>=2.49.2",
    "passlib==1.7.4",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "supabase>=2.28.3",
    "uvicorn[standard]>=0.44.0",
]
